got questions in the js, timer is working correctly now, questions and answers are not showing on the buttones needed too

--- a/assests/style.css
+++ b/assests/style.css
@@ -13,7 +13,7 @@ body {
     background-color: aquamarine;
 }
 
-#button {
+#Button {
     display: grid;
 }
 
@@ -21,18 +21,14 @@ body {
     display: none;
 }
 
-#question-1 {
-    display: none;
-}
-
-#question-2 {
-    display: none;
-}
-
-#question-3 {
-    display: none;
-}
-
 #button1 {
     display: grid;
+}
+
+.hide {
+    display: none;
+}
+
+.hide1 {
+    display: none!important;
 }
